<?xml version="1.0"?>
<package format="2">
  <name>test_msgs</name>
  <version>0.1.0</version>
  <description>The test_msgs package</description>
  <maintainer email="kenji.miyake@tier4.jp">Kenji Miyake</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>mobileye_560_660_msgs</depend>
  <depend>std_msgs</depend>

  <build_depend>message_generation</build_depend>

  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
